# graphrag-ai-tour-26

./: BUILD.md  README.md  azure.yaml
azure/: README.md  (+3 more)
server/: .dockerignore  .env.example  .gitignore  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  settings.yaml
server/endpoints/: build.py  evaluate.py  feedback.py  graph.py  query.py  questions.py
server/output/: community_reports.parquet  documents.parquet
server/output/lancedb/community_full_content.lance/_transactions/: 0-6b0eaaf9-3717-49d5-96d0-414f2edd9220.txn  1-456f66e3-ab1b-4623-944d-d40c6d04adda.txn
server/output/lancedb/community_full_content.lance/_versions/: 1.manifest  3.manifest  4.manifest
server/output/lancedb/community_full_content.lance/data/: 97f537b8-56b9-45a9-a971-3a611adec607.lance
server/output/lancedb/entity_description.lance/_transactions/: 0-dae3dc84-4805-409e-bec3-343c955a162d.txn  3-1f1a47c8-65cf-4ce9-9d6d-63816b266c2e.txn  4-29c778fb-a484-41c5-9591-b22589db7678.txn
server/output/lancedb/entity_description.lance/_versions/: 1.manifest
server/output/lancedb/text_unit_text.lance/_transactions/: 1-17a50e87-7c32-4627-abf1-af07e90ea31f.txn
server/output/lancedb/text_unit_text.lance/_versions/: 1.manifest  2.manifest  3.manifest
server/output/lancedb/text_unit_text.lance/data/: 64d95c4a-aa11-4bc8-b901-6cf1e4607850.lance
server/src/: app.ts
server/src/config/: config.ts
server/src/middlewares/: errorHandler.ts
server/src/routes/: testRoutes.ts
server/utils/: build_pipeline.py  graphrag_query.py  graphrag_questions.py  rag_query.py
(+514 files in other folders)
